--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="lbl_special_offers">Special Offers</string>
     <string name="lbl_latest_news">Latest News</string>
     <string name="lbl_see_all">See All</string>
+    <string name="lbl_sell_all_news">Sell All News</string>
+    <string name="lbl_news">News</string>
+    <string name="lbl_detail_news">Detail News</string>
+    <string name="lbl_other_news">Other News</string>
 </resources>
