--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="lbl_featured_product">Featured Products</string>
     <string name="lbl_best_sellers">Best Sellers</string>
     <string name="lbl_new_arrivals">New Arrivals</string>
-    <string name="lbl_top_rated_product">Top Rated Product</string>
+    <string name="lbl_top_rated_product">Top Rated Products</string>
     <string name="lbl_special_offers">Special Offers</string>
     <string name="lbl_latest_news">Latest News</string>
     <string name="lbl_see_all">See All</string>
@@ -20,11 +20,13 @@
     <string name="lbl_filter_sorting"><![CDATA[Filter & Sorting]]></string>
     <string name="lbl_add_to_cart">Add to Cart</string>
     <string name="lbl_added">Added</string>
-    <string name="lbl_detail_product">Detail Product</string>
+    <string name="lbl_detail_product">Product Detail</string>
     <string name="lbl_product_description">Product Description</string>
     <string name="lbl_see_all_review">See All Reviews</string>
     <string name="lbl_follow">Follow</string>
     <string name="lbl_sorting">Sorting</string>
     <string name="lbl_search_in_store">Search in Store</string>
-    <string name="lbl_review_product">Review Product</string>
+    <string name="lbl_review_product">Product Review</string>
+    <string name="lbl_seller_info">Seller Info</string>
+    <string name="lbl_all_categories">All Categories</string>
 </resources>
