--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="lbl_total_price">Total Price</string>
     <string name="lbl_reset">Reset</string>
     <string name="lbl_apply">Apply</string>
+    <string name="lbl_shipping_support">Shipping Support</string>
+    <string name="lbl_price_range">Price Range</string>
 </resources>
