--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="lbl_apply">Apply</string>
     <string name="lbl_shipping_support">Shipping Support</string>
     <string name="lbl_price_range">Price Range</string>
+    <string name="lbl_register_account">Register Account</string>
+    <string name="lbl_enter_email_phone_number_to_register">Enter Email/Phone Number to register</string>
 </resources>
