--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="lbl_register">Register</string>
     <string name="lbl_password_confirmation">Password Confirmation</string>
     <string name="lbl_password">Password</string>
+    <string name="lbl_verification">Verification</string>
+    <string name="lbl_confirm">Confirm</string>
 </resources>
